--- a/src/styles/partials/_breakpoints.scss
+++ b/src/styles/partials/_breakpoints.scss
@@ -1,5 +1,5 @@
 @mixin large-mobile {
-    @media screen and (min-width: 425px) {
+    @media screen and (min-width: 470px) {
         @content;
     }
 }
